# birdsite

./: Cargo.toml  README.md
birdwatch/: Cargo.toml
birdwatch/src/: model.rs
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/age/: mod.rs
core/src/client/: mod.rs
core/src/model/: attributes.rs  cashtag.rs  color.rs  country.rs  entities.rs  entity.rs  lang.rs  media.rs  metrics.rs  mod.rs  place.rs  probability.rs  properties.rs  snowflake.rs  source.rs  time_zone.rs  timestamp.rs  url.rs
core/src/model/attributes/: mod.rs  ratio_i64.rs  ratio_u64.rs
core/src/model/graphql/: about_account.rs  ads.rs  affiliation.rs  community.rs  image.rs  mod.rs  shapes.rs  text.rs  timeline.rs  trends.rs  tweet.rs  unavailable.rs  user.rs
core/src/model/graphql/birdwatch/: manifest.rs  mod.rs  profile.rs
core/src/model/graphql/birdwatch/note/: mod.rs  model.rs
core/src/model/graphql/properties/: context.rs  display.rs  mod.rs
core/src/model/graphql/timeline/: client.rs  context.rs  item.rs  mod.rs  trends.rs
core/src/model/graphql/tweet/: mod.rs  partial.rs  preview.rs
core/src/model/graphql/user/: common.rs  community.rs  mention.rs  mod.rs  partial.rs  repr.rs
core/src/model/graphql/user/about_account/: location.rs  mod.rs  partial.rs  source.rs
core/src/model/lang/: mod.rs  stats.rs
core/src/model/user/: about.rs  entities.rs  mod.rs  properties.rs
core/src/model/wbm/: data.rs  mod.rs  v1.rs
core/src/model/wxj/: data.rs  flat.rs  mod.rs
core/src/model/wxj/data/: context.rs  entity.rs  error.rs  media.rs  mod.rs  place.rs
core/src/model/wxj/flat/: entity.rs  media.rs  mod.rs
core/src/model/wxj/metadata/: tweet.rs
core/tests/: batch.rs  deserialize.rs
creds/: Cargo.toml
creds/src/: lib.rs
db/: Cargo.toml
db/src/: lib.rs
db/src/metadata/: mod.rs  tweet.rs
db/src/tweets/: mod.rs
examples/: wbm-data-1604707978090663937.json  wbm-data-1631317712193351681.json  wbm-data-1637945937258754048.json  wbm-data-1795974655615857059.json  wbm-data-1796341860165963967.json  wbm-data-1796552569180889293.json  wbm-data-1798152929783816332.json  wbm-data-1801398574380445880.json  wbm-data-1804245824467075206.json  wbm-data-1808937099589996745.json  wbm-data-1809434014178042096.json  wbm-data-1813324959801901215.json  wbm-data-1814274947960709489.json  wbm-data-1820641895174865381.json  wbm-data-1820765571362824614.json  wbm-data-1821864680228274256.json  wbm-data-1827105765011734994.json  wbm-data-1829223684940480956.json  wbm-data-1833402059414245783.json  wbm-data-1840582159381205076.json  wbm-data-1845998964283527207.json  wbm-data-1847247038661976161.json  wbm-data-1847306394623754337.json  wbm-data-1847476804564488484.json  wbm-data-1848088587947958523.json  wbm-data-1848424834167865685.json  wbm-data-1849454441830739991.json  wbm-data-1850024819284152449.json  wbm-data-1852849270564495748.json  wbm-data-1857219243219021988.json  wbm-data-1857270748944994804.json  wbm-data-1859432681898983820.json  wbm-data-1865165548880888019.json  wbm-data-1869198471598858378.json  wbm-data-1869356652480327743.json  wbm-data-1875609942314623471.json  wbm-data-1875993789892047207.json  wbm-data-1879337629495496982.json  wbm-data-1881187152257810817.json  wbm-v1-1006425694312771584.json  (+34 more)
examples/graphql/: birdwatch-manifest-2025-08-28.json  birdwatch-notes-2025-08-28.ndjson  communities-2024-08-01.ndjson  communities-2025-06-01.ndjson  errors-authorization-1764497106517.json  errors-data-missing-1738068567896.json  errors-none-1764460993001.json  errors-timeout-1764462528033.json
examples/wxj/: media.ndjson
follows/: Cargo.toml
follows/src/: lib.rs  rate_limits.rs  stream.rs
graphql/: Cargo.toml
graphql-creds/: Cargo.toml
graphql-creds/src/: lib.rs  types.rs
graphql-creds/src/schemas/: ctid.sql
graphql-ctid/: Cargo.toml
graphql-ctid/src/: client.rs  color.rs  cubic.rs  lib.rs  store.rs
graphql-ctid/src/generator/: color.rs  cubic.rs  mod.rs
graphql-ctid/tests/: integration_test.rs
graphql-xpff/: Cargo.toml
graphql-xpff/src/: lib.rs
graphql/src/: lib.rs
graphql/src/archive/: io.rs  mod.rs  parse.rs  request.rs  response.rs
graphql/src/client/: creds.rs
graphql/src/request/: filter.rs  mod.rs  name.rs  variables.rs
graphql/src/response/: error.rs
graphql/src/response/data/: mod.rs  tweet.rs  user.rs
hacks/: Cargo.toml
hacks/src/: main.rs
hacks/src/db/tweets/: mod.rs
rate-limits/: Cargo.toml
rate-limits/src/: lib.rs
src/: codec.rs  creds.rs  lib.rs  timestamp.rs
src/model/: color.rs  entities.rs  lang.rs  mod.rs
src/model/wbm/: data.rs  mod.rs  v1.rs
