[package]
name = "birdsite-birdwatch"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
bounded-static = { workspace = true }
bounded-static-derive-more = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
