[package]
name = "birdsite-cli"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
birdsite = { path = "../core/" }
birdsite-db = { path = "../db/" }
chrono = { workspace = true }
cli-helpers = { workspace = true }
csv = { workspace = true }
itertools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
