[package]
name = "birdsite"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
chrono = { workspace = true }
num-rational = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
quickcheck = { workspace = true }
serde_json = { workspace = true }
