[package]
name = "birdsite"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
bounded-static = { workspace = true }
bounded-static-derive-more = { workspace = true }
chrono = { workspace = true }
num-rational = { workspace = true }
regex = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-field-attributes = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
quickcheck = { workspace = true }
serde_json = { workspace = true }
