[package]
name = "birdsite-graphql-creds"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
birdsite-graphql-ctid = { path = "../graphql-ctid/" }
chrono = { workspace = true }
rusqlite = "0.37"
thiserror = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros"] }
