[package]
name = "birdsite-graphql-ctid"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
base64 = "0.22"
chrono = { workspace = true }
csv = { workspace = true }
libmath = "0.2"
rand = "0.9"
regex = { workspace = true }
reqwest = "0.12"
scraper = "0.22"
serde = { workspace = true }
sha2 = "0.10"
thiserror = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }