[package]
name = "birdsite-graphql-ctid"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
base64 = "0.22"
chrono = { workspace = true }
libmath = "0.2"
rand = { workspace = true }
regex = { workspace = true }
reqwest = "0.12"
scraper = "0.25"
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
