[package]
name = "birdsite-graphql-xpff"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
aes-gcm = "0.10"
chrono = { workspace = true }
hex = "0.4"
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
