[workspace]

[package]
name = "birdsite-hacks"
authors = ["Travis Brown <travisrobertbrown@gmail.com>"]
repository = "https://github.com/travisbrown/archivindex"
edition = "2024"
license = "AGPL-3.0-only"
version = "0.1.0"

[dependencies]
birdsite = { path = "../core/" }
birdsite-graphql = { path = "../graphql/" }
bounded-static = "0.8"
chrono = { version = "0.4", features = ["serde"] }
cli-helpers = "0.1"
csv = "1"
futures = "0.3"
globwalk = "0.9"
itertools = "0.14"
rocksdb = { version = "0.24", features = ["zstd"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
zstd = "0.13"
