[package]
name = "birdsite-rate-limits"
authors = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
edition = { workspace = true }

[dependencies]
bytemuck = "1"
chrono = { workspace = true }
dashmap = "6"
reqwest = "0.12"
serde_json = { workspace = true }
thiserror = { workspace = true }